crates/teleport/tests/compile-fail/invalid_auth_attr.stderr
error: duplicate auth parameter
         a #[remote] function may have at most one auth parameter (marked with `#[auth]` or typed as `AuthedUser`/`Option<AuthedUser>`)
  --> tests/compile-fail/invalid_auth_attr.rs:15:17
   |
15 |     #[auth] _b: MyUser,
   |                 ^^^^^^

warning: unused import: `AppError`
 --> tests/compile-fail/invalid_auth_attr.rs:1:24
  |
1 | use teleport::{remote, AppError};
  |                        ^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
